--- a/sass/_Style_Messenger.sass
+++ b/sass/_Style_Messenger.sass
@@ -41,6 +41,7 @@ chat.cu[data-style="messenger"]
                 overflow: hidden
                 padding-bottom: .4em
                 &>img 
+                    max-width: 450px
                     padding-bottom: .4em
                 &>.title,&>.header
                     font-weight: bold
